--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,13 +95,53 @@ body {
 
 h1,h2,h3,h4 {
   color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* REUSABLE CSS CLASSES */
+.section {
+  padding: 2rem 0 4rem;
+}
 
+.section__title {
+  font-size: var(--h1-font-size);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-3);
+}
+
+.section__title,
+.section__subtitle {
+  text-align: center;
+}
 
 /* LAYOUT */
+.container {
+  max-width: 768px;
+  margin-left: var(--mb-1-5);
+  margin-right: var(--mb-1-5);
+}
 
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
 
 /* NAV */
 
@@ -112,5 +152,5 @@ h1,h2,h3,h4 {
 /* Active link */
 
 
-/*  */
+/* Change background header */
 
